--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id "java"
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
@@ -7,29 +7,30 @@ repositories {
     mavenCentral()
 }
 
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
 dependencies {
 
     testImplementation(
             "io.rest-assured:rest-assured:4.4.0",
             "org.aeonbits.owner:owner:1.0.12",
-            'com.fasterxml.jackson.core:jackson-databind:2.13.0',
-            'org.junit.jupiter:junit-jupiter-api:5.8.2',
-            'org.junit.jupiter:junit-jupiter-params:5.8.2',
+            "com.fasterxml.jackson.core:jackson-databind:2.13.0",
+            "org.junit.jupiter:junit-jupiter-api:5.8.2",
+            "org.junit.jupiter:junit-jupiter-params:5.8.2",
             "org.hamcrest:hamcrest:2.2",
 
     )
     testRuntimeOnly(
             "org.slf4j:slf4j-simple:1.7.32",
-            'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+            "org.junit.jupiter:junit-jupiter-engine:5.8.2"
     )
 }
 
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+compileTestJava {
+    options.encoding = "UTF-8"
 }
 
-tasks.withType(Test) {
+test {
     useJUnitPlatform()
 }
